GemRB V0.4.0 (2009-05-25):
  New features:
    - level up support in bg2
    - basic party reordering
    - bashing of containers and doors
    - persistent area effects (cloudkill, stinking cloud, web, etc.)
    - item amount window for stack splitting (shift+click or doubleclick)
    - depletion of item charges
    - opcodes: disable spellcasting, cutscene2 (pocketplane travel), knock,
      clear air, polymorph, disable button
    - dynamic scrollbar creation (display of more than 10 kits, 24 spells)
    - portrait effect icons
    - item ability selection
    - character customization

  Improved features:
    - fog of war
    - party reformation
    - iwd and how guiscripts have been merged
    - traps
    - pst dialogs
    - regeneration, hp bonuses, healing
    - animations and projectiles
    - rewritten MVE player
    - ranged combat
    - various guiscripts
    - bugfixes

  Applied patches:
    #2770564 Whiteclone (pst options window bug)
    numerous patches from mattinm finishing the level up support
    a few patches from ape fixing and extending iwd
    #2579743 jbmetz added RPM spec files

GemRB V0.3.2 (2009-02-16):
  New features:
    - default cancel button, bound to the escape key
    - tooltip animations and a shortcut (tab)
    - wrapper python classes that simplified the GUIScripts
    - trap detection, removal, triggering, xp, feedback, autopause
    - modal effects
    - proper xp award for dual- and multiclass actors
    - double click (used in the map window)
    - click-and-hold incrementing/decrementing
    - accumulate kill statistics
    - characters can move while the map is open
    - sound on item equip
    - arbitrary feat prerequisites in iwd2
    - hard pause for all games (originally a ToB feature); triggered with 'h'
    - extended night areas (originally a bg2 feature)

  Improved features:
    - walking animation timing
    - formations (arbitrary sizes, rotation, cursor)
    - ppc support (no more crashes)