@@ -1,3 +1,14 @@
+GemRB svn (6100):
+  New features:
+    - 
+
+  Improved features:
+    - 
+    - various guiscripts
+    - bugfixes
+
+  Applied patches:
+
 GemRB V0.4.0 (2009-05-25):
   New features:
     - level up support in bg2
